--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ body{
     display: block;
     margin: 0 auto;
     padding: 20px;
-    background-color: black;
+    background-color: yellow;
     width: 300px;
     height: 500px;
     border-radius: 20px;
